--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Quicksand:wght@300&display=swap');
+*{
+  /* font-family: 'Quicksand', sans-serif; */
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body{
+  background-color: #F2F2F2;
+  color: #056CF2;
+  font-family: 'Dela Gothic One', cursive;
+  font-weight: 400;
+}
+
+.wrapper{
+  width: 1280px;
+  margin: 50px auto;
+}
+
+header .logo{
+  font-weight: 600;
+  font-size: 20px;
+  
+}   
+
+.logo-div{
+  display: inline;
+}
+
+.nav-list{
+  float: right; 
+  list-style-type: none ;
+} 
+
+.nav-list li{
+  display: inline;
+  margin-left: 25px;
+  cursor: pointer;
+  transition: opacity 500ms ease;
+  text-align: center;
+}
+
+.nav-list li:hover{
+  opacity: 0.5;
+}
+
+.nav-list li a{
+  text-decoration: none;
+}
+
+header .presentation{
+  margin: 50px 0;
+  background: url(./images/banner-new\ balance.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-blend-mode: multiply;
+  width: 100%;
+  color:#F2F2F2;
+  height:500px;
+  position: relative;
+}
+
+header .presentation::after{
+  content: "Лучшие кроссовки в России";
+  position: absolute;
+  top: 40px;
+  left: 50px;
+  font-size: 40px;
+  font-weight: 600;
+  color: black;
 }
