--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,24 @@ header .presentation::after{
   color: black;
 }
 
+.categories div{
+  display: inline-block;
+  background: #056CF2;
+  border-radius: 50px;
+  color: white;
+  padding: 10px 20px;
+  margin-bottom: 50px;
+  margin-right: 15px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  transition: all 500ms ease;
+}
+
+.categories div:hover{
+  background: #052e7f;
+  transform: scale(1.1);
+}
+
 main{
   display: flex;
   justify-content: space-between;
@@ -171,6 +189,7 @@ main .item{
 main .item img{
   width: 100%;
   transition: transform 500ms ease;
+  cursor: pointer;
 }
 
 main .item img:hover{
