full-item and json-server

--- a/src/index.css
+++ b/src/index.css
@@ -170,6 +170,30 @@ header .presentation::after{
   transform: scale(1.1);
 }
 
+.full-item{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgb(0, 0, 0 ,0.8);
+  z-index: 9999;
+  overflow: auto;
+}
+
+.full-item > div{
+  width: 600px;
+  position: relative;
+  margin: 10% auto;
+  padding: 40px 30px;
+  background: #F2F2F2;
+  border-radius: 5px;
+}
+
+.full-item > div > img{
+  width: 100%;
+}
+
 main{
   display: flex;
   justify-content: space-between;
@@ -186,29 +210,34 @@ main .item{
   position: relative;
 }
 
-main .item img{
+main .item img,
+.full-item .item img{
   width: 100%;
   transition: transform 500ms ease;
   cursor: pointer;
 }
 
-main .item img:hover{
+
+main .item img:hover,
+.full-item .item img:hover {
   transform: scale(1.05);
 } 
 
-main h2,
-main p,
-main b{
+main h2, .full-item h2,
+main p, .full-item p,
+main b, .full-item b{
   margin: 10px 20px;
   color: #e3e0e0;
   padding-bottom: 25px;
 }
 
-main b{
+main b,
+.full-item b{
   color: #d75712;
 }
 
-main .add-to-cart{
+main .add-to-cart,
+.full-item .add-to-cart{
   position: absolute;
   right: 20px;
   bottom: 20px;
@@ -223,7 +252,8 @@ main .add-to-cart{
   transition: 500ms ease;
 }
 
-main .add-to-cart:hover{
+main .add-to-cart:hover,
+.full-item .add-to-cart:hover{
   color: red;
   transform: scale(1.05) translateY(-5px);
 }
